--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             {q: '$\\int_{0}^{\\frac{\\pi}{2}} x \\cos x dx$', a: '$\\frac{\\pi}{2} - 1$', source: '例題3 (2) より'},
             {q: '$\\int \\log x dx$', a: '$x \\log x - x + C$', source: '例題3 (3) より'},
             {q: '$\\int x(\\log x)^2 dx$', a: '$\\frac{1}{2}x^2(\\log x)^2 - \\frac{1}{2}x^2\\log x + \\frac{1}{4}x^2 + C$', source: '例題3 (4) より'},
-            {q: '$\\int e^x \\sin x dx$', a: '$\\frac{1}{2}e^x(\\sin x + \\cos x) + C$', source: '例題3 (5) より'},
+            {q: '$\\int e^x \\cos x dx$', a: '$\\frac{1}{2}e^x(\\sin x + \\cos x) + C$', source: '例題3 (5) より'},
             // 例題4
             {q: '$\\int_{e}^{e^e} \\frac{\\log(\\log x)}{x \\log x} dx$', a: '$\\frac{1}{2}$', source: '例題4 (1) より'},
             {q: '$\\int x^3 e^{x^2} dx$', a: '$\\frac{1}{2}e^{x^2}(x^2-1) + C$', source: '例題4 (2) より'},
